# ai-manus

./: .gitignore  pyproject.toml  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/application/services/: agent_service.py  session_service.py
backend/app/domain/services/: agent_domain_service.py
backend/app/interfaces/api/: router.py
backend/app/interfaces/api/routes/: session.py
backend/app/interfaces/schemas/: request.py  response.py
tools/: trace_client.py
